--- a/Pag.html
+++ b/Pag.html
@@ -9,7 +9,7 @@
   <title>Pagina Home</title>
   <link rel="shortcut icon" href="furrygamerlogo.jpg" type="image/x-icon">
   <link rel="stylesheet" href="reset.css" />
-  <link rel="stylesheet" href="Teste.css" />
+  <link rel="stylesheet" href="pag.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -24,7 +24,7 @@
       <nav>
         <ul class="Sites">
           <li><a href="Teste.html">Home</a></li>
-          <li><a href="https://yiffer.xyz">Yiffer</a></li>
+          <li><a href="https://www.linkedin.com/in/joão-camilo-mallmann-1982b8226/">Linkedin</a></li>
         </ul>
       </nav>
     </div>
