--- a/index.html
+++ b/index.html
@@ -15,95 +15,96 @@
       href="https://fonts.googleapis.com/css2?family=Arimo&family=Lato&family=Montserrat:ital,wght@0,100;1,100&display=swap"
       rel="stylesheet"
     />
-
-    <body>
-      <header>
-        <div class="caixa">
-          <img src="JC.png" alt="Logo site" class="logo" />
-          
-          <nav>
-            <ul class="Sites">
-              <li><a href="Teste.html">Home</a></li>
-              <li>
-                <a
-                  href="https://www.linkedin.com/in/joão-camilo-mallmann-1982b8226/"
-                  >Linkedin</a
-                >
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </header>
-
-      <main>
-        <p class="formatando">
-          🏆 TOP 5 🏆 <br />
-          Melhores Furries
-        </p>
-
-        <div class="fundo">
-          <ul class="gifs">
-            <li class="elementos">
-              <h1 class="tituloGif">Sonic Fox</h1>
-              <img class="tamanho" src="sonicfox-fortnite.gif" alt="dace" />
-              <p class="legenda">Melhor Gamer</p>
-            </li>
-
-            <li class="elementos">
-              <h1 class="tituloGif">Sonic</h1>
-              <img class="tamanho" src="sonic dance.gif" alt="repost" />
-              <p class="legenda">Gotta Go Fast</p>
-            </li>
-
-            <li class="elementos">
-              <h1 class="tituloGif">Louis</h1>
-              <img class="tamanho" src="beastars-louis.gif" alt="repost" />
-              <p class="legenda">Mafia Boss</p>
-            </li>
-
-            <li class="elementos">
-              <h1 class="tituloGif">Shirou Ogami</h1>
-              <img class="tamanho" src="shiro.png" alt="repost" />
-              <p class="legenda">Agente Do FBI</p>
-            </li>
-
-            <li class="elementos">
-              <h1 class="tituloGif">Eddie</h1>
-              <img class="tamanho" src="eddie.jpg" alt="repost" />
-              <p class="legenda">Best Furry</p>
-            </li>
-          </ul>
-        </div>
-      </main>
-
-      <footer>
-        <div>
-          <img src="JC.png" alt="" />
-          <p>
-            &#127463;&#127479; - Criado Por <strong> J.C</strong> - Para Treinar
-            HTML & CSS
-          </p>
-          <p>
-            &#127482;&#127480; - Creaty By <strong> J.C</strong> - To Training
-            Css and Html
-          </p>
-        </div>
-
-        <section class="botao">
-          <input type="checkbox" class="checkbox" id="chk" />
-          <label class="label" for="chk">
-            <i class="fas fa-moon"></i>
-            <i class="fas fa-sun"></i>
-            <div class="ball"></div>
-          </label>
-        </section>
-      </footer>
-
-      <script src="script.js"></script>
-      <script
-        src="https://kit.fontawesome.com/998c60ef77.js"
-        crossorigin="anonymous"
-      ></script>
-    </body>
+    <script src="https://kit.fontawesome.com/6b7ecad886.js" crossorigin="anonymous"></script>
   </head>
+
+  <body>
+    <header>
+      <div class="caixa">
+        <img src="JC.png" alt="Logo site" class="logo" />
+        <nav>
+          <ul class="Sites">
+            <li><a href="Teste.html">Home</a></li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/joão-camilo-mallmann-1982b8226/"
+                >Linkedin</a
+              >
+            </li>
+            <li><i class="fa-solid fa-bars"></i></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <p class="formatando">
+        🏆 TOP 5 🏆 <br />
+        Melhores Furries
+      </p>
+
+      <div class="fundo">
+        <ul class="gifs">
+          <li class="elementos">
+            <h1 class="tituloGif">Sonic Fox</h1>
+            <img class="tamanho" src="sonicfox-fortnite.gif" alt="dace" />
+            <p class="legenda">Melhor Gamer</p>
+          </li>
+
+          <li class="elementos">
+            <h1 class="tituloGif">Sonic</h1>
+            <img class="tamanho" src="sonic dance.gif" alt="repost" />
+            <p class="legenda">Gotta Go Fast</p>
+          </li>
+
+          <li class="elementos">
+            <h1 class="tituloGif">Louis</h1>
+            <img class="tamanho" src="beastars-louis.gif" alt="repost" />
+            <p class="legenda">Mafia Boss</p>
+          </li>
+
+          <li class="elementos">
+            <h1 class="tituloGif">Shirou Ogami</h1>
+            <img class="tamanho" src="shiro.png" alt="repost" />
+            <p class="legenda">Agente Do FBI</p>
+          </li>
+
+          <li class="elementos">
+            <h1 class="tituloGif">Eddie</h1>
+            <img class="tamanho" src="eddie.jpg" alt="repost" />
+            <p class="legenda">Best Furry</p>
+          </li>
+        </ul>
+      </div>
+    </main>
+
+    <footer>
+      <div>
+        <img src="JC.png" alt="" />
+        <p>
+          &#127463;&#127479; - Criado Por <strong> J.C</strong> - Para Treinar
+          HTML & CSS
+        </p>
+        <p>
+          &#127482;&#127480; - Creaty By <strong> J.C</strong> - To Training Css
+          and Html
+        </p>
+      </div>
+
+      <section class="botao">
+        <input type="checkbox" class="checkbox" id="chk" />
+        <label class="label" for="chk">
+          <i class="fas fa-moon"></i>
+          <i class="fas fa-sun"></i>
+          <div class="ball"></div>
+        </label>
+      </section>
+    </footer>
+
+    <script src="script.js"></script>
+    <script
+      src="https://kit.fontawesome.com/998c60ef77.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
