--- a/index.html
+++ b/index.html
@@ -15,16 +15,13 @@
       href="https://fonts.googleapis.com/css2?family=Arimo&family=Lato&family=Montserrat:ital,wght@0,100;1,100&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://kit.fontawesome.com/6b7ecad886.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/6b7ecad886.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
     <header>
       <div class="caixa">
-        <img src="JC.png" alt="Logo site" class="logo" />
+        <img src="Img/JC.png" alt="Logo site" class="logo" />
         <nav>
           <ul class="Sites">
             <li><a href="Teste.html">Home</a></li>
@@ -50,31 +47,31 @@
         <ul class="gifs">
           <li class="elementos">
             <h1 class="tituloGif">Sonic Fox</h1>
-            <img class="tamanho" src="sonicfox-fortnite.gif" alt="dace" />
+            <img class="tamanho" src="Img/sonicfox-fortnite.gif" alt="dace" />
             <p class="legenda">Melhor Gamer</p>
           </li>
 
           <li class="elementos">
             <h1 class="tituloGif">Sonic</h1>
-            <img class="tamanho" src="sonic dance.gif" alt="repost" />
+            <img class="tamanho" src="Img/sonic dance.gif" alt="repost" />
             <p class="legenda">Gotta Go Fast</p>
           </li>
 
           <li class="elementos">
             <h1 class="tituloGif">Louis</h1>
-            <img class="tamanho" src="beastars-louis.gif" alt="repost" />
+            <img class="tamanho" src="Img/beastars-louis.gif" alt="repost" />
             <p class="legenda">Mafia Boss</p>
           </li>
 
           <li class="elementos">
             <h1 class="tituloGif">Shirou Ogami</h1>
-            <img class="tamanho" src="shiro.png" alt="repost" />
+            <img class="tamanho" src="Img/shiro.png" alt="repost" />
             <p class="legenda">Agente Do FBI</p>
           </li>
 
           <li class="elementos">
             <h1 class="tituloGif">Eddie</h1>
-            <img class="tamanho" src="eddie.jpg" alt="repost" />
+            <img class="tamanho" src="Img/eddie.jpg" alt="repost" />
             <p class="legenda">Best Furry</p>
           </li>
         </ul>
@@ -83,7 +80,7 @@
 
     <footer>
       <div>
-        <img src="JC.png" alt="" />
+        <img src="Img/JC.png" alt="" />
         <p>
           &#127463;&#127479; - Criado Por <strong> J.C</strong> - Para Treinar
           HTML & CSS
