--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Arimo&family=Lato&family=Montserrat:ital,wght@0,100;1,100&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/6b7ecad886.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/6b7ecad886.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -96,7 +99,6 @@
         <label class="label" for="chk">
           <i class="fas fa-moon"></i>
           <i class="fas fa-sun"></i>
-          <div class="ball"></div>
         </label>
       </section>
     </footer>
