--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 >Linkedin</a
               >
             </li>
-            <li><i class="fa-solid fa-bars"></i></li>
+            <li><i class="fa-solid fa-bars fa-xl"></i></li>
           </ul>
         </nav>
       </div>
