--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     <header>
       <div class="caixa">
         <img src="Img/JC.png" alt="Logo site" class="logo" />
-        <nav>
+        <<i class="fa-solid fa-bars"></i>
+        <nav class="aberto=true">
           <ul class="Sites">
-            <li><a href="Teste.html">Home</a></li>
+            <li><a href="https://www.google.com">Home</a></li>
             <li>
               <a
                 href="https://www.linkedin.com/in/joão-camilo-mallmann-1982b8226/"
                 >Linkedin</a
               >
             </li>
-            <li><i class="fa-solid fa-bars fa-xl"></i></li>
           </ul>
         </nav>
       </div>
@@ -42,8 +42,8 @@
 
     <main>
       <p class="formatando">
-        🏆 TOP 5 🏆 <br />
-        Melhores Furries
+        🏆 SITE 🏆 <br />
+        TITULO DO SITE
       </p>
 
       <div class="fundo">
