--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
       <div class="caixa">
         <img src="Img/JC.png" alt="Logo site" class="logo" />
-        <<i class="fa-solid fa-bars"></i>
+        <i class="fa-solid fa-bars"></i>
         <nav class="aberto=true">
           <ul class="Sites">
             <li><a href="https://www.google.com">Home</a></li>
@@ -43,40 +43,42 @@
     <main>
       <p class="formatando">
         🏆 SITE 🏆 <br />
-        TITULO DO SITE
+        TITULO
       </p>
 
       <div class="fundo">
         <ul class="gifs">
+
           <li class="elementos">
-            <h1 class="tituloGif">Sonic Fox</h1>
+            <h1 class="tituloGif">Elemento 1</h1>
             <img class="tamanho" src="Img/sonicfox-fortnite.gif" alt="dace" />
-            <p class="legenda">Melhor Gamer</p>
+            <p class="legenda">Legenda 1</p>
           </li>
 
           <li class="elementos">
-            <h1 class="tituloGif">Sonic</h1>
+            <h1 class="tituloGif">Elemento 2</h1>
             <img class="tamanho" src="Img/sonic dance.gif" alt="repost" />
-            <p class="legenda">Gotta Go Fast</p>
+            <p class="legenda">Legenda 2</p>
           </li>
 
           <li class="elementos">
-            <h1 class="tituloGif">Louis</h1>
+            <h1 class="tituloGif">Elemento 3</h1>
             <img class="tamanho" src="Img/beastars-louis.gif" alt="repost" />
-            <p class="legenda">Mafia Boss</p>
+            <p class="legenda">Legenda 3</p>
           </li>
 
           <li class="elementos">
-            <h1 class="tituloGif">Shirou Ogami</h1>
+            <h1 class="tituloGif">Elemento 3</h1>
             <img class="tamanho" src="Img/shiro.png" alt="repost" />
-            <p class="legenda">Agente Do FBI</p>
+            <p class="legenda">Legenda 4</p>
           </li>
 
           <li class="elementos">
-            <h1 class="tituloGif">Eddie</h1>
+            <h1 class="tituloGif">Elemento 4</h1>
             <img class="tamanho" src="Img/eddie.jpg" alt="repost" />
-            <p class="legenda">Best Furry</p>
+            <p class="legenda">Legenda 5</p>
           </li>
+
         </ul>
       </div>
     </main>
