--- a/index.html
+++ b/index.html
@@ -28,20 +28,16 @@
         <i class="fa-solid fa-bars"></i>
         <nav class="aberto=true">
           <ul class="Sites">
-            <li><a href="https://www.google.com">Home</a></li>
-            <li>
-              <a
-                href="https://github.com/JoaoCamiloMallmann"
-                >GitHub</a
-              >
+            <li class="center"><a href="https://www.google.com">Home</a></li>
+            <li class="center">
+              <a href="https://github.com/JoaoCamiloMallmann">GitHub</a>
             </li>
-            <li>
+            <li class="center">
               <a
                 href="https://www.linkedin.com/in/joão-camilo-mallmann-1982b8226/"
                 >Linkedin</a
               >
             </li>
-        
           </ul>
         </nav>
       </div>
