--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     <header>
       <div class="caixa">
         <img src="Img/JC.png" alt="Logo site" class="logo" />
-        <i class="fa-solid fa-bars"></i>
+        <div class="menu">
+          <i class="fa-solid fa-bars"></i>
+          <input type="checkbox" class="checkbox" id="logoMenu" />
+          <label class="label" for="logoMenu"> </label>
+        </div>
         <nav class="aberto=true">
           <ul class="Sites">
             <li class="center"><a href="https://www.google.com">Home</a></li>
@@ -118,8 +122,8 @@
       </div>
 
       <section class="botao">
-        <input type="checkbox" class="checkbox" id="chk" />
-        <label class="label" for="chk">
+        <input type="checkbox" class="checkbox" id="Botaou" />
+        <label class="label" for="Botaou">
           <i class="fas fa-moon"></i>
           <i class="fas fa-sun"></i>
         </label>
