--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
       <div class="caixa">
         <img src="Img/JC.png" alt="Logo site" class="logo" />
         <div class="menu">
-          <i class="fa-solid fa-bars"></i>
-          <input type="checkbox" class="checkbox" id="logoMenu" />
-          <label class="label" for="logoMenu"> </label>
+          <input type="checkbox"id="LogoMenu" />
+          <label for="LogoMenu">
+            ><i class="fa-solid fa-bars"></i>
+          </label>
         </div>
+
         <nav class="aberto=true">
           <ul class="Sites">
             <li class="center"><a href="https://www.google.com">Home</a></li>
