--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <div class="caixa">
         <img src="Img/JC.png" alt="Logo site" class="logo" />
         <div class="menu">
-          <input type="checkbox"id="LogoMenu" />
-          <label for="LogoMenu">
+          <input type="checkbox"id="check" />
+          <label  class="checkbtn" for="check">
             ><i class="fa-solid fa-bars"></i>
           </label>
         </div>
 
-        <nav class="aberto=true">
+        <nav>
           <ul class="Sites">
             <li class="center"><a href="https://www.google.com">Home</a></li>
             <li class="center">
