--- a/index.html
+++ b/index.html
@@ -26,26 +26,28 @@
       <div class="caixa">
         <img src="Img/JC.png" alt="Logo site" class="logo" />
         <div class="menu">
-          <input type="checkbox"id="check" />
-          <label  class="checkbtn" for="check">
+          <input type="checkbox" id="check" />
+          <label class="checkbtn" for="check">
             ><i class="fa-solid fa-bars"></i>
           </label>
         </div>
 
-        <nav>
-          <ul class="Sites">
-            <li class="center"><a href="https://www.google.com">Home</a></li>
-            <li class="center">
-              <a href="https://github.com/JoaoCamiloMallmann">GitHub</a>
-            </li>
-            <li class="center">
-              <a
-                href="https://www.linkedin.com/in/joão-camilo-mallmann-1982b8226/"
-                >Linkedin</a
-              >
-            </li>
-          </ul>
-        </nav>
+        <section>
+          <nav>
+            <ul class="Sites">
+              <li class="center"><a href="https://www.google.com">Home</a></li>
+              <li class="center">
+                <a href="https://github.com/JoaoCamiloMallmann">GitHub</a>
+              </li>
+              <li class="center">
+                <a
+                  href="https://www.linkedin.com/in/joão-camilo-mallmann-1982b8226/"
+                  >Linkedin</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </section>
       </div>
     </header>
 
